--- a/eastyorkgardenclub.client/src/css/general.css
+++ b/eastyorkgardenclub.client/src/css/general.css
@@ -1,6 +1,15 @@
 /* **************************************** */
 /*  Header */
 /* **************************************** */
+body {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400; /* Default weight, can be changed as needed */
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
 
 header {
     display: flex;
