--- a/eastyorkgardenclub.client/src/admin/css/AdminPage.css
+++ b/eastyorkgardenclub.client/src/admin/css/AdminPage.css
@@ -17,6 +17,13 @@
     border-bottom: 1px solid gray;
 }
 
+.sidebar-user {
+    padding: 10px 0;
+    font-size: 16px;
+    text-align: center;
+    border-bottom: 1px solid gray;
+}
+
 .sidebar-nav {
     margin-top: 20px;
 }
