--- a/eastyorkgardenclub.client/src/css/JoinUs.css
+++ b/eastyorkgardenclub.client/src/css/JoinUs.css
@@ -1,14 +1,13 @@
-.admin-form-container {
+.member-form-container {
     max-width: 100%;
     max-height:100%;
-    margin: 20px auto;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
-    .admin-form-container input[type="text"],
-    .admin-form-container input[type="email"] {
+    .member-form-container input[type="text"],
+    .member-form-container input[type="email"] {
         width: 98%;
         padding: 10px;
         margin: 10px 0;
@@ -16,8 +15,8 @@
         border-radius: 5px;
     }
 
-    .admin-form-container input[type="submit"],
-    .admin-form-container button {
+    .member-form-container input[type="submit"],
+    .member-form-container button {
         background-color: #5c4b8b;
         color: white;
         padding: 10px 15px;
@@ -27,50 +26,50 @@
         margin-left: auto;
         margin-right: auto;
     }
-        .admin-form-container input[type="submit"]:hover,
-        .admin-form-container button:hover {
+        .member-form-container input[type="submit"]:hover,
+        .member-form-container button:hover {
             background-color: #473d69;
         }
 
-    .admin-form-container label {
+    .member-form-container label {
         display: block;
         margin-top: 10px;
         color: #333;
         font-size: 1rem;
     }
 
-.admin-form-container .field-group {
+.member-form-container .field-group {
     margin-bottom: 15px;
 }
     
-    .admin-form-container .field-group label {
+    .member-form-container .field-group label {
         margin-bottom: 5px;
         display: inline-block;
     }
 
-.admin-form-container .field-side-group {
+.member-form-container .field-side-group {
     display: flex;
     justify-content: left;
     margin-bottom: 15px;
     align-items: center;
 }
 
-    .admin-form-container .field-side-group .field-side {
+    .member-form-container .field-side-group .field-side {
         
         width:48.3%;
         margin-right: 5px;
     }
-    .admin-form-container .field-side-group .field-side-com {
+    .member-form-container .field-side-group .field-side-com {
         width: 65%;
         margin-right: 10px;
     }
-    .admin-form-container .field-side-group .field-side-chk {
+    .member-form-container .field-side-group .field-side-chk {
         width: 20%;
         margin-right: 1px;
     }
 
-.admin-form-container input[type="submit"],
-.admin-form-container input[type="button"] {
+.member-form-container input[type="submit"],
+.member-form-container input[type="button"] {
     background-color: #5c4b8b;
     color: white;
     padding: 10px 20px;
@@ -80,8 +79,8 @@
     display: inline-block;
 }
 
-    .admin-form-container input[type="submit"]:hover,
-    .admin-form-container input[type="button"]:hover {
+    .member-form-container input[type="submit"]:hover,
+    .member-form-container input[type="button"]:hover {
         background-color: #473d69;
     }
 
@@ -131,8 +130,7 @@
     }
 }
 
-.admin-form-container .selectStyle {
-    width: 98%;
+.member-form-container .selectStyle {
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ccc;
