--- a/eastyorkgardenclub.client/src/css/JoinUs.css
+++ b/eastyorkgardenclub.client/src/css/JoinUs.css
@@ -1,142 +1,141 @@
 .member-form-container {
-    max-width: 100%;
-    max-height:100%;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  max-width: 100%;
+  max-height: 100%;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-    .member-form-container input[type="text"],
-    .member-form-container input[type="email"] {
-        width: 98%;
-        padding: 10px;
-        margin: 10px 0;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
+.member-form-container input[type="text"],
+.member-form-container input[type="email"] {
+  width: 98%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
 
-    .member-form-container input[type="submit"],
-    .member-form-container button {
-        background-color: #5c4b8b;
-        color: white;
-        padding: 10px 15px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-left: auto;
-        margin-right: auto;
-    }
-        .member-form-container input[type="submit"]:hover,
-        .member-form-container button:hover {
-            background-color: #473d69;
-        }
+.member-form-container input[type="submit"],
+.member-form-container button {
+  background-color: #5c4b8b;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+}
+.member-form-container input[type="submit"]:hover,
+.member-form-container button:hover {
+  background-color: #473d69;
+}
 
-    .member-form-container label {
-        display: block;
-        margin-top: 10px;
-        color: #333;
-        font-size: 1rem;
-    }
+.member-form-container label {
+  display: block;
+  margin-top: 10px;
+  color: #333;
+  font-size: 1rem;
+}
 
 .member-form-container .field-group {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
-    
-    .member-form-container .field-group label {
-        margin-bottom: 5px;
-        display: inline-block;
-    }
+
+.member-form-container .field-group label {
+  margin-bottom: 5px;
+  display: inline-block;
+}
 
 .member-form-container .field-side-group {
-    display: flex;
-    justify-content: left;
-    margin-bottom: 15px;
-    align-items: center;
+  display: flex;
+  justify-content: left;
+  margin-bottom: 15px;
+  align-items: center;
 }
 
-    .member-form-container .field-side-group .field-side {
-        
-        width:48.3%;
-        margin-right: 5px;
-    }
-    .member-form-container .field-side-group .field-side-com {
-        width: 65%;
-        margin-right: 10px;
-    }
-    .member-form-container .field-side-group .field-side-chk {
-        width: 20%;
-        margin-right: 1px;
-    }
+.member-form-container .field-side-group .field-side {
+  width: 48.3%;
+  margin-right: 5px;
+}
+.member-form-container .field-side-group .field-side-com {
+  width: 65%;
+  margin-right: 10px;
+}
+.member-form-container .field-side-group .field-side-chk {
+  width: 20%;
+  margin-right: 1px;
+}
 
 .member-form-container input[type="submit"],
 .member-form-container input[type="button"] {
-    background-color: #5c4b8b;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    display: inline-block;
+  background-color: #5c4b8b;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: inline-block;
 }
 
-    .member-form-container input[type="submit"]:hover,
-    .member-form-container input[type="button"]:hover {
-        background-color: #473d69;
-    }
+.member-form-container input[type="submit"]:hover,
+.member-form-container input[type="button"]:hover {
+  background-color: #473d69;
+}
 
 .payment-method {
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: 15px;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 15px;
 }
 
 .payment-option {
-    flex: 1; 
-    border: 1px solid #000;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 190px;
-    box-sizing: border-box;
+  flex: 1;
+  border: 1px solid #000;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 190px;
+  box-sizing: border-box;
 }
 
 .payment-title,
 .bank-charge {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .email-link {
-    color: blue;
-    text-decoration: underline;
+  color: blue;
+  text-decoration: underline;
 }
 
 .payment-option label {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
-    .payment-option label:last-child {
-        margin-bottom: 0;
-    }
+.payment-option label:last-child {
+  margin-bottom: 0;
+}
 
 @media (max-width: 768px) {
-    .payment-method {
-        flex-direction: column;
-    }
+  .payment-method {
+    flex-direction: column;
+  }
 
-    .payment-option {
-        width: 100%;
-        margin-bottom: 10px;
-    }
+  .payment-option {
+    width: 100%;
+    margin-bottom: 10px;
+  }
 }
 
 .member-form-container .selectStyle {
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: white;
-    color: #333;
-    font-size: 1rem;
-    margin-left:5px;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: white;
+  color: #333;
+  font-size: 1rem;
+  margin-left: 5px;
 }
