--- a/eastyorkgardenclub.client/src/admin/css/AdminPage.css
+++ b/eastyorkgardenclub.client/src/admin/css/AdminPage.css
@@ -1,4 +1,5 @@
 .admin-page-container {
+    font-family: "Inter", sans-serif;
     display: flex;
     height: 100vh;
 }
@@ -30,7 +31,9 @@
 
 .sidebar-menu {
     list-style: none;
+    flex-direction:column;
     padding: 0;
+    margin: 0;
 }
 
     .sidebar-menu li a {
@@ -54,6 +57,6 @@
 }
 
 #logout-button {
-  position: absolute;
-  bottom: 10px;
+    position: fixed;
+    bottom: 10px;
 }
