--- a/eastyorkgardenclub.client/src/css/Meetings.css
+++ b/eastyorkgardenclub.client/src/css/Meetings.css
@@ -4,6 +4,7 @@
 
 .breadcrumb {
   padding: 1rem 5rem;
+  margin-bottom: 3.2rem;
 }
 
 .heading-meetings {
@@ -18,6 +19,7 @@
 .breadcrumb {
   background-color: #f6f6f6;
   padding: 1rem 2rem;
+  border-radius: 5px;
   display: inline-block;
 }
 
@@ -26,13 +28,43 @@
   display: flex;
   margin: 0;
   padding: 0;
+  gap: 0;
+}
+.breadcrumb ul li {
+  margin: 0;
 }
 
-.breadcrumb ul li {
+.breadcrumb-link {
   font-size: 1.3rem;
   color: #454545;
+  text-decoration: none;
 }
 
-.breadcrumb li:not(:last-child)::after {
-  content: "&gt;";
+.breadcrumb li:not(:first-child)::before {
+  content: "〉";
+  font-size: 1.2rem;
+  display: inline-block;
+  margin: 0 0.5rem 0 1rem;
+}
+
+.pagination {
+  margin-top: 8rem;
+}
+
+.page-item {
+  list-style: none;
+}
+
+.page-link:link,
+.page-link:visited {
+  display: inline-block;
+  font-size: 1.8rem;
+  color: #454545;
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+.page-link:hover,
+.page-link:active {
+  color: #d785c8;
 }
