--- a/eastyorkgardenclub.client/src/css/general.css
+++ b/eastyorkgardenclub.client/src/css/general.css
@@ -120,6 +120,7 @@ body {
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
   column-gap: 3.2rem;
+  row-gap: 4.8rem;
 }
 
 .grid--2-cols {
