--- a/eastyorkgardenclub.client/src/css/Meetings.css
+++ b/eastyorkgardenclub.client/src/css/Meetings.css
@@ -1,10 +1,5 @@
 .section-meetings {
-  padding: 9.6rem 0;
-}
-
-.breadcrumb {
-  padding: 1rem 5rem;
-  margin-bottom: 3.2rem;
+  padding: 6.4rem 0 12.8rem 0;
 }
 
 .heading-meetings {
@@ -16,55 +11,59 @@
   margin-bottom: 4.8rem;
 }
 
-.breadcrumb {
-  background-color: #f6f6f6;
-  padding: 1rem 2rem;
-  border-radius: 5px;
-  display: inline-block;
+.meeting-card {
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.breadcrumb ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  gap: 0;
-}
-.breadcrumb ul li {
-  margin: 0;
+.meeting-img {
+  width: 100%;
+  height: 18rem;
 }
 
-.breadcrumb-link {
-  font-size: 1.3rem;
-  color: #454545;
-  text-decoration: none;
+.meeting-content {
+  background-color: #9abc92;
+  padding: 3.5rem 3rem;
+  height: 23.7rem;
+  position: relative;
 }
 
-.breadcrumb li:not(:first-child)::before {
-  content: "〉";
-  font-size: 1.2rem;
-  display: inline-block;
-  margin: 0 0.5rem 0 1rem;
+.meeting-subtitle {
+  color: #fff;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 1.6rem;
 }
 
-.pagination {
-  margin-top: 8rem;
-}
-
-.page-item {
-  list-style: none;
-}
-
-.page-link:link,
-.page-link:visited {
-  display: inline-block;
+.meeting-title {
+  color: #fff;
   font-size: 1.8rem;
-  color: #454545;
-  text-decoration: none;
-  transition: all 0.2s;
+  font-weight: 800;
+  margin-bottom: 1.6rem;
+  line-height: 1.2;
 }
 
-.page-link:hover,
-.page-link:active {
-  color: #d785c8;
+.meeting-date {
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 400;
+  margin-bottom: 3.2rem;
+}
+
+.meeting-link:link,
+.meeting-link:visited {
+  font-size: 1.6rem;
+  color: #65305e;
+  text-decoration: none;
+  font-weight: 800;
+  position: absolute;
+  bottom: 3.5rem;
+}
+
+.meeting-link:hover,
+.meeting-link:active {
+  color: #8f4b88;
 }
