--- a/eastyorkgardenclub.client/src/css/mainPage/index.css
+++ b/eastyorkgardenclub.client/src/css/mainPage/index.css
@@ -31,12 +31,18 @@ header {
   gap: 4.8rem;
   align-items: center;
 }
-.main-nav-link {
+.main-nav-link:link,
+.main-nav-link:visited {
   display: inline-block;
-  font-size: 1.6rem;
-  font-weight: 400;
+  font-size: 1.8rem;
+  font-weight: 500;
   text-decoration: none;
   color: #333333;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #6f6f6f;
 }
 
 .main-nav-link.nav-cta:link,
@@ -45,6 +51,11 @@ header {
   border-radius: 5px;
   color: #fff;
   background-color: #8f4b88;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #a56fa0;
 }
 
 /* **************************************** */
@@ -82,81 +93,32 @@ header {
   margin-bottom: 3rem;
 }
 
-.Learn-more-link {
+.learn-more-link:link,
+.learn-more-link:visited {
   display: inline-block;
   font-size: 1.8rem;
   font-weight: 700;
   text-decoration: none;
   color: #65305e;
 }
+
+.learn-more-link:hover,
+.learn-more-link:active {
+  color: #8f4b88;
+}
+
 .hero-heading {
   color: #fff;
+}
+
+.hero-heading span {
+  font-weight: 400;
 }
 /* **************************************** */
 /*  Meeting Section */
 /* **************************************** */
 .section-meetings {
   padding: 9.6rem 0;
-}
-
-.meeting-card {
-  width: 100%;
-  border: none;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.meeting-img {
-  width: 100%;
-  height: 18rem;
-}
-
-.meeting-content {
-  background-color: #9abc92;
-  padding: 3.5rem 3rem;
-  height: 23.7rem;
-  position: relative;
-}
-
-.meeting-subtitle {
-  color: #fff;
-  font-size: 1.4rem;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-bottom: 1.6rem;
-}
-
-.meeting-title {
-  color: #fff;
-  font-size: 1.8rem;
-  font-weight: 800;
-  margin-bottom: 1.6rem;
-  line-height: 1.2;
-}
-
-.meeting-date {
-  color: #fff;
-  font-size: 1.6rem;
-  font-weight: 400;
-  margin-bottom: 3.2rem;
-}
-
-.meeting-link {
-  font-size: 1.6rem;
-  color: #65305e;
-  text-decoration: none;
-  font-weight: 800;
-  position: absolute;
-  bottom: 3.5rem;
-}
-
-.meeting-slide {
-  padding: 1rem;
-  box-sizing: border-box;
-}
-
-.slick-slide {
-  margin: 0;
 }
 
 /* **************************************** */
@@ -245,14 +207,20 @@ header {
   height: 27rem;
 }
 .submit-btn {
-  padding: 1rem 2.8rem;
+  font-size: 1.8rem;
+  font-weight: 500;
+  padding: 1.2rem 3.5rem;
   border: none;
   border-radius: 5px;
   color: #fff;
-  background-color: #65305e;
+  background-color: #8f4b88;
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.submit-btn:hover {
+  background-color: #a56fa0;
 }
 
 .submit-btn-box {
