--- a/eastyorkgardenclub.client/src/css/MeetingsDetail.css
+++ b/eastyorkgardenclub.client/src/css/MeetingsDetail.css
@@ -11,18 +11,10 @@
   margin-bottom: 4.8rem;
 }
 
-.calendar-outline,
-.time-outline,
-.mic-outline,
-.location-outline {
-  width: 2.4rem;
-  height: 2.4rem;
-}
-
 .meeting-detail-box {
   display: flex;
   justify-content: start;
-  gap: 6.4rem;
+  gap: 8rem;
   align-items: start;
 }
 .meeting-detail {
@@ -30,20 +22,98 @@
   color: #808080;
   line-height: 1.6;
   font-weight: 400;
-  margin-top: 1.6rem;
   margin-bottom: 2.4rem;
+  display: flex;
+  gap: 1.6rem;
 }
 
 .meeting-detail-title {
+  color: #333333;
   font-weight: 600;
 }
 
 .meeting-description {
-  width: 80rem;
   font-size: 1.8rem;
   color: #808080;
   line-height: 1.6;
   font-weight: 400;
   margin-top: 1.6rem;
+  margin-bottom: 9.6rem;
+}
+
+.attatch-file-box {
+  padding: 2rem;
+  background-color: #f6f6f6;
+  border-radius: 5px;
+  margin-bottom: 2.4rem;
+}
+
+.attatch-file-wrap {
+  display: flex;
+  align-items: center;
+}
+
+.attatch-file-name {
+  font-size: 1.8rem;
+  color: #808080;
+  line-height: 1.6;
+  font-weight: 400;
+  text-decoration: none;
+  margin-left: 1.5rem;
+}
+
+/* .navigatepage-box {
+  border: 1px solid #808080;
+} */
+
+/* .navigatepage-box :not(:last-child) {
+  border-bottom: 1px solid #808080;
+} */
+.navigatepage-box {
+  border-top: 1px solid #808080;
+  border-bottom: 1px solid #808080;
   margin-bottom: 4.8rem;
+}
+.navigatepage-wrap {
+  display: flex;
+  font-size: 1.8rem;
+  color: #808080;
+  line-height: 1.6;
+  font-weight: 400;
+  padding: 1.5rem;
+}
+
+.navigatepage-box .navigatepage-wrap:last-child {
+  border-top: 1px solid #808080;
+}
+
+.next,
+.previous {
+  font-size: 1.8rem;
+  color: #333333;
+  line-height: 1.6;
+  font-weight: 600;
+  padding-left: 4.8rem;
+  width: 20rem;
+}
+.list-btn-box {
+  display: flex;
+  justify-content: center;
+}
+
+.list-btn:link,
+.list-btn:visited {
+  padding: 1.2rem 3.5rem;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #568f4a;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.list-btn:hover,
+.list-btn:active {
+  background-color: #78a56e;
 }
