--- a/eastyorkgardenclub.client/src/css/NewsLetters.css
+++ b/eastyorkgardenclub.client/src/css/NewsLetters.css
@@ -1,11 +1,10 @@
-.section-newsletter {
-
+/* .section-newsletter {
 }
 
 .news-page-container {
-    font-family: "Inter", sans-serif;
-    display: flex;
-    height: 85.5vh;
+  font-family: "Inter", sans-serif;
+  display: flex;
+  height: 85.5vh;
 }
 
 .heading-newsletter {
@@ -17,56 +16,125 @@
   margin-bottom: 4.8rem;
 }
 
-.news-main {
-    flex-grow: 1;
-    padding: 20px;
-    overflow-y: auto;
-    background-color: #f8f9fa;
+.news-pdfviewer {
+  flex-grow: 1;
+  padding: 20px;
+  overflow-y: auto;
+  background-color: #f8f9fa;
 }
 .news-sidebar {
-
-    width: 30rem;
-    background-color: #f8f9fa;
-    color: white;
-    padding: 40px;
+  width: 30rem;
+  background-color: #f8f9fa;
+  color: white;
+  padding: 40px;
 }
 
 .news-sidebar-title {
-    padding: 10px 0;
-    font-size: 20px;
-    text-align: center;
-    border-bottom: 1px solid gray;
+  padding: 10px 0;
+  font-size: 20px;
+  text-align: center;
+  border-bottom: 1px solid gray;
 }
 
 .news-sidebar-user {
-    padding: 10px 0;
-    font-size: 16px;
-    text-align: center;
-    border-bottom: 1px solid gray;
+  padding: 10px 0;
+  font-size: 16px;
+  text-align: center;
+  border-bottom: 1px solid gray;
 }
 
 .news-sidebar-nav {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .news-sidebar-menu {
-    display:flex;
-    list-style: none;
-    flex-direction: column;
-    gap: 2rem;
-    justify-content: center;
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
 }
 
-    .news-sidebar-menu li button {
-        flex-direction: column;
-        color: #a56fa0;
-        text-decoration: none;
-        display: block;
-        padding: 10px;
-        transition: background-color 0.3s;
-    }
+.news-sidebar-menu li button {
+  flex-direction: column;
+  color: #a56fa0;
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+  transition: background-color 0.3s;
+}
 
-        .news-sidebar-menu li a:hover {
-            opacity: 0.30;
-            cursor: pointer;
-        }
+.news-sidebar-menu li a:hover {
+  opacity: 0.3;
+  cursor: pointer;
+} */
+
+.section-newsletters {
+  padding: 6.4rem 0 12.8rem 0;
+}
+
+.heading-newsletters {
+  font-size: 6rem;
+  font-weight: 700;
+  color: #333333;
+  width: 60rem;
+  line-height: 1.4;
+  margin-bottom: 4.8rem;
+}
+
+.newsletter-grid {
+  grid-template-columns: 70fr 30fr;
+  column-gap: 4.8rem;
+}
+.list-total {
+  font-size: 1.6rem;
+  color: #505050;
+  line-height: 1.6;
+}
+
+.list-info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.newsletter-item {
+  border-top: 1.8px solid #cbcbcb;
+  list-style: none;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+}
+
+.newsletter-item {
+  color: #8f4b88;
+}
+
+.newsletter-list:last-child {
+  border-bottom: 1.8px solid #cbcbcb;
+}
+.newsletter-title {
+  font-size: 1.6rem;
+  color: #505050;
+  line-height: 1.6;
+  background-color: #f6f6f6;
+  font-weight: 700;
+  border-top: 1.8px solid #cbcbcb;
+  list-style: none;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: center;
+}
+
+.newsletter-item a:link,
+.newsletter-item a:visited {
+  font-size: 1.6rem;
+  color: #808080;
+  line-height: 1.6;
+  font-weight: 400;
+  text-decoration: none;
+}
+
+.newsletter-item a:hover,
+.newsletter-item a:active {
+  color: #8f4b88;
+}
