React navigation and sql connection fix

--- a/eastyorkgardenclub.client/src/css/general.css
+++ b/eastyorkgardenclub.client/src/css/general.css
@@ -123,6 +123,11 @@ body {
   font-size: 1.3rem;
   color: #454545;
   text-decoration: none;
+  cursor:pointer
+}
+
+.breadcrumb li:last-child {
+    cursor:default;
 }
 
 .breadcrumb li:not(:first-child)::before {
