--- a/eastyorkgardenclub.client/src/admin/css/AdminPage.css
+++ b/eastyorkgardenclub.client/src/admin/css/AdminPage.css
@@ -4,59 +4,61 @@
     height: 100vh;
 }
 
-.sidebar {
-    width: 250px;
+.admin-sidebar {
+    width: 25rem;
     background-color: #8f4b88;
     color: white;
-    padding: 40px;
+    padding: 4rem;
 }
 
-.sidebar-title {
-    padding: 10px 0;
-    font-size: 20px;
+.admin-sidebar-title {
+    padding: 1rem 0;
+    font-size: 2rem;
     text-align: center;
-    border-bottom: 1px solid gray;
+    border-bottom: 0.1rem solid gray;
 }
 
-.sidebar-user {
-    padding: 10px 0;
-    font-size: 16px;
+.admin-sidebar-user {
+    padding: 1rem 0;
+    font-size: 1.6rem;
     text-align: center;
-    border-bottom: 1px solid gray;
+    border-bottom: 0.1rem solid gray;
 }
 
-.sidebar-nav {
-    margin-top: 20px;
+.admin-sidebar-nav {
+    margin-top: 2rem;
 }
 
-.sidebar-menu {
+.admin-sidebar-menu {
     list-style: none;
     flex-direction:column;
     padding: 0;
     margin: 0;
 }
 
-    .sidebar-menu li a {
+    .admin-sidebar-menu li a {
+        font-size:1.8rem;
         color: white;
         text-decoration: none;
         display: block;
-        padding: 10px;
+        padding: 1rem;
         transition: background-color 0.3s;
     }
 
-        .sidebar-menu li a:hover {
+        .admin-sidebar-menu li a:hover {
             opacity:0.30;
             cursor:pointer;
         }
 
 .admin-main {
     flex-grow: 1;
-    padding: 20px;
+    padding: 2rem;
     overflow-y: auto;
     background-color: #f8f9fa; 
+    height:100%;
 }
 
 #logout-button {
     position: fixed;
-    bottom: 10px;
+    bottom: 1rem;
 }
