--- a/eastyorkgardenclub.client/src/css/about.css
+++ b/eastyorkgardenclub.client/src/css/about.css
@@ -31,7 +31,7 @@
   width: 100%;
 }
 
-.joinus-btn-about:link,
+.joinus-btn-about,
 .joinus-btn-about:visited {
   padding: 1.2rem 3.5rem;
   border-radius: 5px;
