--- a/eastyorkgardenclub.client/src/css/mainPage/index.css
+++ b/eastyorkgardenclub.client/src/css/mainPage/index.css
@@ -190,22 +190,47 @@ header {
 }
 
 .name-input,
-.email-input,
-.message-input {
-  width: 100%;
-  padding: 1.2rem;
-  color: inherit;
-  font-size: 1.8rem;
-  font-family: inherit;
-  background-color: white;
-  border: 1px solid #e1e1e1;
-  border-radius: 7px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-  margin-bottom: 3.2rem;
+.email-input {
+    width: 100%;
+    padding: 1.2rem;
+    color: inherit;
+    font-size: 1.8rem;
+    font-family: inherit;
+    background-color: white;
+    border: 1px solid #e1e1e1;
+    border-radius: 0.7rem;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    margin-bottom: 3.2rem;
 }
+
 .message-input {
-  height: 27rem;
+    width: 100%;
+    height: 27rem;
+    padding: 1.2rem;
+    margin: 1rem 0;
+    border: 0.1rem solid #ccc;
+    border-radius: 0.7rem;
+    background-color: white;
+    color: inherit;
+    overflow-y: auto;
+    resize: vertical;
+    box-sizing: border-box;
+    line-height: 1.5;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    text-align: left;
+    font-size: 1.8rem;
+    font-family: inherit;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
+
+    .message-input::placeholder {
+        padding-top: 10rem;
+        padding-bottom: 10rem;
+        font-family: inherit;
+        font-size: 1.8rem;
+    }
+
 .submit-btn {
   font-size: 1.8rem;
   font-weight: 500;
@@ -214,7 +239,6 @@ header {
   border-radius: 5px;
   color: #fff;
   background-color: #8f4b88;
-  position: absolute;
   bottom: 0;
   right: 0;
 }
@@ -224,8 +248,9 @@ header {
 }
 
 .submit-btn-box {
-  display: flex;
-  justify-content: end;
+    display: flex;
+    justify-content: end;
+    margin-top: 0.5rem;
 }
 
 /* **************************************** */
