--- a/eastyorkgardenclub.client/src/css/general.css
+++ b/eastyorkgardenclub.client/src/css/general.css
@@ -171,21 +171,42 @@ body {
 }
 
 .pagination {
-  margin-top: 8rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
+
+    .pagination ul {
+        display: inline-flex;
+        font-size: 1.6rem;
+        gap: 1.6rem;
+        justify-content: center;
+        list-style-type: none;
+        padding: 0;
+        margin: 0 auto;
+    }
 
 .page-item {
   list-style: none;
+  cursor:pointer;
 }
+
+    .page-item.active .page-link {
+        text-decoration: underline;
+    }
 
 .page-link:link,
 .page-link:visited {
-  display: inline-block;
-  font-size: 1.6rem;
-  font-weight: 500;
-  color: #454545;
-  text-decoration: none;
-  transition: all 0.2s;
+    display: inline-block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: #454545;
+    text-decoration: none;
+    transition: all 0.2s;
+    padding: 0.5rem 0.75rem;
+    cursor: pointer;
 }
 
 .page-link:hover,
