--- a/eastyorkgardenclub.client/src/css/mainPage/index.css
+++ b/eastyorkgardenclub.client/src/css/mainPage/index.css
@@ -191,45 +191,45 @@ header {
 
 .name-input,
 .email-input {
-    width: 100%;
-    padding: 1.2rem;
-    color: inherit;
-    font-size: 1.8rem;
-    font-family: inherit;
-    background-color: white;
-    border: 1px solid #e1e1e1;
-    border-radius: 0.7rem;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    margin-bottom: 3.2rem;
+  width: 100%;
+  padding: 1.2rem;
+  color: inherit;
+  font-size: 1.8rem;
+  font-family: inherit;
+  background-color: white;
+  border: 1px solid #e1e1e1;
+  border-radius: 0.7rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  margin-bottom: 3.2rem;
 }
 
 .message-input {
-    width: 100%;
-    height: 27rem;
-    padding: 1.2rem;
-    margin: 1rem 0;
-    border: 0.1rem solid #ccc;
-    border-radius: 0.7rem;
-    background-color: white;
-    color: inherit;
-    overflow-y: auto;
-    resize: none;
-    box-sizing: border-box;
-    line-height: 1.5;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    text-align: left;
-    font-size: 1.8rem;
-    font-family: inherit;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: 27rem;
+  padding: 1.2rem;
+  margin: 1rem 0;
+  border: 0.1rem solid #ccc;
+  border-radius: 0.7rem;
+  background-color: white;
+  color: inherit;
+  overflow-y: auto;
+  resize: none;
+  box-sizing: border-box;
+  line-height: 1.5;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  text-align: left;
+  font-size: 1.8rem;
+  font-family: inherit;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 
-    .message-input::placeholder {
-        padding-top: 10rem;
-        padding-bottom: 10rem;
-        font-family: inherit;
-        font-size: 1.8rem;
-    }
+.message-input::placeholder {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  font-family: inherit;
+  font-size: 1.8rem;
+}
 
 .submit-btn {
   font-size: 1.8rem;
@@ -248,9 +248,9 @@ header {
 }
 
 .submit-btn-box {
-    display: flex;
-    justify-content: end;
-    margin-top: 0.5rem;
+  display: flex;
+  justify-content: end;
+  margin-top: 0.5rem;
 }
 
 /* **************************************** */
@@ -262,6 +262,7 @@ footer {
   padding: 3rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .copyright {
