--- a/eastyorkgardenclub.client/src/css/mainPage/index.css
+++ b/eastyorkgardenclub.client/src/css/mainPage/index.css
@@ -2,7 +2,7 @@
 /*  Header */
 /* **************************************** */
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -56,6 +56,18 @@ header {
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #a56fa0;
+}
+/* hamburger-menue */
+.btn-hamburger-menue {
+  border: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-hamburger-menue,
+.icon-close-menue {
+}
+.icon-close-menue {
+  display: none;
 }
 
 /* **************************************** */
@@ -134,7 +146,7 @@ header {
 /*  Meeting Section */
 /* **************************************** */
 .section-meetings {
-  padding: 9.6rem 0;
+  padding: 9.6rem 0 0 0;
 }
 
 /* **************************************** */
@@ -275,7 +287,8 @@ header {
 
 footer {
   background-color: #f6f6f6;
-  padding: 3rem;
+  padding: 4.8rem 3.2rem;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
